# omero-screen-analysis

./: .bumpversion.cfg  README.md  hhlab_style01.mplstyle  pyproject.toml
src/omero_screen_analysis/: __init__.py  cellcycle_quant.py  cellcycleplot.py  check.py  classification_plot.py  combplot.py  count_plot.py  countplot.py  featureplot.py  if_analysis.py  stats.py  synergy.py  utils.py
tests/: conftest.py  sampled_data.csv  test_cellcycle_quant.py  test_cellcycleplot.py  test_combplot.py  test_count_plots.py  test_countplot.py  test_data.csv  test_featurplot.py
tests/jupyter_nbs/: cellcycleplot.ipynb  combplot.ipynb  combplot_it.ipynb  count_it.ipynb  data_prep.ipynb  featureplot_it.ipynb  stackedbarplot.ipynb
